# CoinBot

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CoinBot.h  README.md  build_and_check.cmd
.claude/: settings.local.json
cmake/: deps.cmake
deploy/: .env.template  coinbot.service  deploy.sh
docs/: ARCHITECTURE.md  ARCH_DECISION_GUIDE.md  BEFORE_ARCHITECTURE.md  CODE_STRUCTURE_EXPLAINED.md  EC2_DEPLOY.md  Google_Cpp_Codinguide.md  IMPLEMENTATION_STATUS.md  INTRABAR_POSITION_EFFECT_DESIGN.md  LINUX_MIGRATION.md  PHASE1_7_MULTIMARKET_INTEGRATION_TEST.md  PHASE2_STEP7_9_PYTHON_TOOLS.md  PROJECT_FLOWSRUDY.md  ROADMAP.md  architecture.md  design_26_ws_message_parser.md  example.md  github_readme_ex.md  readme_structure.md  review.md
docs/reports/: CorrectionHistory.md  PHASE0_COMPLETED.md  PROJECT_STRUCTURE_IMPROVEMENTS.md  ROADMAP_MULTIMARKET_REVIEW.md  STARTUP_RECOVERY_MULTIMARKET.md  review1.md  review2.md  review3.md  review4.md  smallReview.md
docs/tests_md/: multimarket_components.md
docs/tests_md/accountManager/: AccountManager.cpp.md  AccountManager.h.md  AccountManager_syncWithAccount_fix.md  CHANGELOG_dust_handling_fix.md  CHANGELOG_syncWithAccount_fix.md  test_account_manager_mapping.md
docs/tests_md/eventRouter/: EventRouter.cpp.md  EventRouter.h.md  test_event_router_mapping.md
docs/tests_md/marketEngine/: MarketEngine.cpp.md  MarketEngine.h.md  test_market_engine_mapping.md
docs/tests_md/marketEngineManager/: MarketEngineManager.cpp.md  MarketEngineManager.h.md
docs/tests_md/sharedORderApi/: SharedOrderApi_REVIEW.md
docs/tests_md/sharedOrderApi/: SharedOrderApi.cpp.md  SharedOrderApi.h.md  test_shared_order_api_mapping.md
reviewmd/: CoinBot_cpp_review.md  MarketEngineManager_cpp_review.md  MarketEngineManager_h_review.md  StartupRecovery_h_cpp_review.md
scripts/: run_local.sh
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/auth/: UpbitJwtSigner.cpp  UpbitJwtSigner.h
src/api/rest/: HttpTypes.h  RestClient.cpp  RestClient.h  RestError.cpp  RestError.h  RetryPolicy.h  UpbitConverters.h
src/api/upbit/: IOrderApi.h  SharedOrderApi.cpp  SharedOrderApi.h  UpbitDtos.h  UpbitExchangeRestClient.cpp  UpbitExchangeRestClient.h  UpbitPublicRestClient.cpp  UpbitPublicRestClient.h  WsMessageParser.cpp  WsMessageParser.h
src/api/upbit/dto/: UpbitAssetOrderDtos.h  UpbitQuotationDtos.h  UpbitWithdrawalDtos.h  UpbitWsDtos.h  UpbittWsDtos.h
src/api/upbit/mappers/: AccountMapper.h  CandleMapper.h  MarketMapper.h  MyOrderMapper.h  OpenOrdersMapper.h  OrderbookMapper.h  TickerMapper.h  TimeFrameMapper.h
src/api/ws/: UpbitWebSocketClient.cpp  UpbitWebSocketClient.h
src/app/: CMakeLists.txt  CoinBot.cpp  EngineRunner.cpp  EngineRunner.h  EventRouter.cpp  EventRouter.h  MarketDataEventBridge.cpp  MarketDataEventBridge.h  MarketEngineManager.cpp  MarketEngineManager.h  MyOrderEventBridge.cpp  MyOrderEventBridge.h  OrderEngineDemo.cpp  StartupRecovery.cpp  StartupRecovery.h  TestCandleWebUpdate.cpp  TestIndicators.cpp  TestRsiMeanReversionStrategy.cpp  TestUpbitPublic.cpp
src/app/test/: RealTradingMain.cpp
src/core/: BlockingQueue.h  CMakeLists.txt
src/core/domain/: Account.h  Candle.h  Instrument.h  MarketInfo.h  MyTrade.h  Order.h  OrderBook.h  OrderEnums.h  OrderRequest.h  OrderTypes.h  Position.h  Ticker.h  Trade.h  Types.h
src/database/: CMakeLists.txt  Database.cpp  Database.h
src/db/: Database.cpp  Database.h  coinbot.db  schema.sql
src/engine/: CMakeLists.txt  EngineEvents.h  EngineResult.h  FeePolicy.h  IOrderEngine.h  MarketEngine.cpp  MarketEngine.h  OrderStore.cpp  OrderStore.h  PrivateOrderApi.h  RealOrderEngine.cpp  RealOrderEngine.h
src/engine/input/: EngineInput.h
src/engine/upbit/: UpbitPrivateOrderApi.cpp  UpbitPrivateOrderApi.h
src/trading/: CMakeLists.txt
src/trading/allocation/: AccountManager.cpp  AccountManager.h
src/trading/indicators/: CMakeLists.txt  ChangeVolatilityIndicator.cpp  ChangeVolatilityIndicator.h  ClosePriceWindow.cpp  ClosePriceWindow.h  IndicatorTypes.h  RingBuffer.h  RsiWilder.cpp  RsiWilder.h  Sma.cpp  Sma.h
src/trading/strategies/: RsiMeanReversionStrategy.cpp  RsiMeanReversionStrategy.h  StrategyTypes.h
src/util/: CMakeLists.txt  Config.h  JsonOptional.h  Logger.h  ThreadSafeRingBuffer.h  UrlCodec.h
streamlit/: app.py
tests/: CMakeLists.txt  real_trading_test.cpp  single_real_trading_test.cpp  test_account_manager_unified.cpp  test_candle_web.cpp  test_event_router.cpp  test_market_engine.cpp  test_market_engine_manager.cpp  test_shared_order_api_advanced.cpp  test_strategy.cpp  test_upbit_public.cpp  test_utils.h
tests/mocks/: MockOrderApi.h
tools/: candle_rsi_backtest.py  fetch_candles.py  requirements.txt  seed_demo_data.py
tools/backtest_results/: trades_KRW_XRP.csv
vcpkg_installed_backup/vcpkg/: compiler-file-hash-cache.json  issue_body.md  status  vcpkg-lock.json
vcpkg_installed_backup/vcpkg/blds/detect_compiler/x64-windows-rel/: build.ninja  cmake_install.cmake
vcpkg_installed_backup/vcpkg/blds/detect_compiler/x64-windows-rel/vcpkg-parallel-configure/: .ninja_log
vcpkg_installed_backup/vcpkg/blds/fmt/: error-logs-x64-windows.txt
vcpkg_installed_backup/vcpkg/blds/fmt/x64-windows-dbg/: CMakeCache.txt
vcpkg_installed_backup/vcpkg/blds/fmt/x64-windows-rel/: CMakeCache.txt
vcpkg_installed_backup/vcpkg/blds/fmt/x64-windows-rel/vcpkg-parallel-configure/: build.ninja
vcpkg_installed_backup/vcpkg/blds/vcpkg-cmake-config/: x64-windows.vcpkg_abi_info.txt
vcpkg_installed_backup/vcpkg/pkgs/fmt_x64-windows/share/fmt/: vcpkg_abi_info.txt
vcpkg_installed_backup/vcpkg/pkgs/vcpkg-cmake-config_x64-windows/: CONTROL
vcpkg_installed_backup/vcpkg/pkgs/vcpkg-cmake_x64-windows/: CONTROL
vcpkg_installed_backup/vcpkg/updates/: 0000000000  0000000001  0000000002  0000000003  0000000004  0000000005  0000000006  0000000007
vcpkg_installed_backup/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json
vcpkg_installed_backup/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json
(+1 files in other folders)
